--- a/mmvip.html
+++ b/mmvip.html
@@ -126,8 +126,8 @@ margin:10px;
 
 <!-- UY BEGIN -->
 <script type="text/javascript">
-#counter-box{display: none !important;}
-.global-nav{display: none !important;}
+#counter-box:{display: none !important;}
+.global-nav:{display: none !important;}
 
 </script>
 <div id="uyan_frame"></div>
