--- a/mmvip.html
+++ b/mmvip.html
@@ -126,9 +126,7 @@ margin:10px;
 
 <!-- UY BEGIN -->
 <script type="text/javascript">
-#counter-box:{display: none !important;}
-.global-nav:{display: none !important;}
-
+.global-nav { margin: 0 0 0px;!important}
 </script>
 <div id="uyan_frame"></div>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1744990"></script>
