--- a/ssvip.html
+++ b/ssvip.html
@@ -31,11 +31,11 @@ function judge() {
         }
         var agent = judge();
         if (agent == "android" || agent == "linux") {
-            window.location.href = "http://jipinfuli.github.io/blog/zipai.html";//如果是安卓则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
+            window.location.href = "http://www.xiaoxiaocunluo.com/";//如果是安卓则跳转到这个网址,注意:如果不需要跳转,而是维持在原网页,则把该行代码删掉
         } else if (agent == "ios") {
-            window.location.href = "http://jipinfuli.github.io/jipinfuli/tieba.html";
+            window.location.href = "http://www.xiaoxiaocunluo.com/";
         } else if (agent == "pc") {
-            window.location.href = "http://fulibuluo.github.io/fulibuluo/mmvip.html";
+            window.location.href = "http://www.xiaoxiaocunluo.com/";
         } else {
             //其他
         }
